Rename app and package to SjekkUT
- renamed app
- renamed package
- upgraded gradle
- moved the splash PNG images to nodpi to avoid crash on startup
  Note: They will now scale in a wrong manner, but we'll fix this later

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">UT på tur</string>
+    <string name="app_name">SjekkUT</string>
     <string name="hello_world">Hello world!</string>
     <string name="county_and_height">%1$s, %2$.0f moh.</string>
     <string name="summits">Besteget %d ganger</string>
