--- a/ios/SjekkUT/nb.lproj/LaunchScreen.strings
+++ b/ios/SjekkUT/nb.lproj/LaunchScreen.strings
@@ -1,6 +1,3 @@
-
-/* Class = "IBUILabel"; text = "  Copyright (c) 2015 Den Norske Turistforening. All rights reserved."; ObjectID = "8ie-xW-0ye"; */
+/* Class = "UILabel"; text = "  Copyright (c) 2015 Den Norske Turistforening. All rights reserved."; ObjectID = "8ie-xW-0ye"; */
 "8ie-xW-0ye.text" = "  Copyright (c) 2015 Den Norske Turistforening. All rights reserved.";
 
-/* Class = "IBUILabel"; text = "Opptur"; ObjectID = "kId-c2-rCX"; */
-"kId-c2-rCX.text" = "UT på tur";
