--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -66,6 +66,8 @@
     <string name="challenge_joined_toast">Du deltar nå i %s</string>
     <string name="distance_to_you">Din avstand: %s</string>
     <string name="cd_mountain_image">mountain image</string>
+    <string name="tripVisitStatus">%1$d/%2$d besøk</string>
+    <string name="not_implemented">Ikke implementert</string>
     <plurals name="checkin_daily_count">
         <item quantity="one">Kun en person har sjekket inn her idag.</item>
         <item quantity="other">%d personer har sjekket inn her idag.</item>
