Add search / filtering to the Project fragment
- Add Toolbar to fragment_projectlist
- Set the Toolbar as the action bar
- add a seach icon and a Searchview to the Toolbar
- Change the app theme  to Theme.AppCompat.Light.NoActionBar
  Note: This hides the old-style actionbar for the other fragments (gotta fix that)
- remove RedActionBar style
- added a copy of the List<Project> called mProjectListCopy that we
   use to store the unfiltered list when we're not filtering
   Note: This can lead to concurrency issues (lost data) if we filter when the
   app is still loading data from the server (gotta fix that)

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -68,6 +68,7 @@
     <string name="cd_mountain_image">mountain image</string>
     <string name="projectVisitStatus">%1$d/%2$d besøk</string>
     <string name="not_implemented">Ikke implementert</string>
+    <string name="action_search">Søk</string>
     <plurals name="checkin_daily_count">
         <item quantity="one">Kun en person har sjekket inn her idag.</item>
         <item quantity="other">%d personer har sjekket inn her idag.</item>
