Add ProfileStatsFragment that contains dummy data
- Added ProjectListFragment, PlaceVisitAdapter
- Added layouts to support them
- enabled Up button on SummitListFragment
- renamed projectitem.xml to item_project.xml for
  symmetric naming

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -69,6 +69,7 @@
     <string name="projectVisitStatus">%1$d/%2$d besøk</string>
     <string name="not_implemented">Ikke implementert</string>
     <string name="action_search">Søk</string>
+    <string name="antallbesøk">%d besøk</string>
     <plurals name="checkin_daily_count">
         <item quantity="one">Kun en person har sjekket inn her idag.</item>
         <item quantity="other">%d personer har sjekket inn her idag.</item>
