update translation and launch screen

--- a/ios/SjekkUT/nb.lproj/LaunchScreen.strings
+++ b/ios/SjekkUT/nb.lproj/LaunchScreen.strings
@@ -1,3 +1,3 @@
-/* Class = "UILabel"; text = "  Copyright (c) 2015 Den Norske Turistforening. All rights reserved."; ObjectID = "8ie-xW-0ye"; */
-"8ie-xW-0ye.text" = "  Copyright (c) 2015 Den Norske Turistforening. All rights reserved.";
+/* Class = "UILabel"; text = "Copyright (c) 2016 Den Norske Turistforening. All rights reserved."; ObjectID = "8ie-xW-0ye"; */
+"8ie-xW-0ye.text" = "Opphavsrett (c) 2016 Den Norske Turistforening. Alle rettigheter.";
 
