--- a/ios/SjekkUT/nb.lproj/Main.strings
+++ b/ios/SjekkUT/nb.lproj/Main.strings
@@ -1,3 +1,18 @@
+/* Class = "UILabel"; text = "Not climbed"; ObjectID = "1hP-bX-jT4"; */
+"1hP-bX-jT4.text" = "Ikke besøkt";
+
+/* (No Commment) */
+"3Xd-S5-Acu.text" = "fylke, høyde";
+
+/* Class = "UILabel"; text = "Distance"; ObjectID = "4bq-KB-5bn"; */
+"4bq-KB-5bn.text" = "Avstand";
+
+/* Class = "UIButton"; normalTitle = "Read more on our web"; ObjectID = "4xf-6c-zdk"; */
+"4xf-6c-zdk.normalTitle" = "Les mer på websiden";
+
+/* Class = "UILabel"; text = "County, Municipality"; ObjectID = "6Qf-y5-0pm"; */
+"6Qf-y5-0pm.text" = "Fylke, Kommune";
+
 /* (No Commment) */
 "6pE-DR-y7O.text" = "fylke, høyde";
 
@@ -10,26 +25,47 @@
 /* Class = "UIButton"; normalTitle = "Check in!"; ObjectID = "BES-ZN-c87"; */
 "BES-ZN-c87.normalTitle" = "Sjekk inn!";
 
+/* Class = "UILabel"; text = "text"; ObjectID = "BJb-op-u41"; */
+"BJb-op-u41.text" = "tekst";
+
 /* (No Commment) */
 "HGd-kH-adL.text" = "navn";
 
 /* Class = "UIButton"; normalTitle = "Check in!"; ObjectID = "IBq-T2-jaY"; */
 "IBq-T2-jaY.normalTitle" = "Sjekk inn!";
 
+/* Class = "UILabel"; text = "Distance"; ObjectID = "IZR-xG-8Qf"; */
+"IZR-xG-8Qf.text" = "Avstand";
+
 /* (No Commment) */
 "Kxj-xj-gTr.normalTitle" = "Trykk her for å bli med!";
 
-/* Class = "UILabel"; text = "climber count"; ObjectID = "N6j-fg-bgj"; */
+/* (No Commment) */
 "N6j-fg-bgj.text" = "antall besteget";
 
 /* (No Commment) */
 "OXH-wX-4GR.text" = "Gratulerer! Du har besteget alle toppene!";
 
-/* Class = "UILabel"; text = "Distance"; ObjectID = "R5u-WJ-Jhc"; */
+/* (No Commment) */
 "R5u-WJ-Jhc.text" = "Avstand";
+
+/* Class = "UILabel"; text = "county, elevation"; ObjectID = "Tpt-2q-Edn"; */
+"Tpt-2q-Edn.text" = "fylke, høyde";
+
+/* Class = "UILabel"; text = "Visited 0/0"; ObjectID = "U0G-m3-VQp"; */
+"U0G-m3-VQp.text" = "Besøkt 0/0";
+
+/* Class = "UIViewController"; title = "Profile"; ObjectID = "UVh-iZ-6qI"; */
+"UVh-iZ-6qI.title" = "Profil";
 
 /* Class = "UILabel"; text = "name"; ObjectID = "VRa-9U-b97"; */
 "VRa-9U-b97.text" = "navn";
+
+/* Class = "UILabel"; text = "climb count"; ObjectID = "VmB-of-5bj"; */
+"VmB-of-5bj.text" = "antall besøk";
+
+/* Class = "UILabel"; text = "Date"; ObjectID = "Vr9-EL-Pxm"; */
+"Vr9-EL-Pxm.text" = "Dato";
 
 /* (No Commment) */
 "X32-B9-KX4.title" = "Sjekk UT";
@@ -40,23 +76,53 @@
 /* (No Commment) */
 "Y7P-p5-GVc.text" = "Ikke besteget";
 
-/* Class = "UIButton"; normalTitle = "Read more on our web"; ObjectID = "bGD-Db-PQW"; */
+/* Class = "UILabel"; text = "Label"; ObjectID = "ZJY-j5-pPY"; */
+"ZJY-j5-pPY.text" = "Merkelapp";
+
+/* Class = "UILabel"; text = "county, elevation"; ObjectID = "Zpb-Sf-7NT"; */
+"Zpb-Sf-7NT.text" = "fylke, høyde";
+
+/* Class = "UILabel"; text = "Group name"; ObjectID = "ZxV-H7-Wj5"; */
+"ZxV-H7-Wj5.text" = "Gruppenavn";
+
+/* Class = "UIButton"; normalTitle = "Logout"; ObjectID = "b95-Ep-JLP"; */
+"b95-Ep-JLP.normalTitle" = "Logg ut";
+
+/* (No Commment) */
 "bGD-Db-PQW.normalTitle" = "Les mer på våre websider";
 
 /* (No Commment) */
 "bfX-bI-S5E.text" = "toppturer";
 
-/* Class = "UILabel"; text = "No Challenge"; ObjectID = "hY6-0v-phf"; */
+/* Class = "UILabel"; text = "Group name"; ObjectID = "eO8-IV-Qld"; */
+"eO8-IV-Qld.text" = "Gruppenavn";
+
+/* Class = "UILabel"; text = "Place name"; ObjectID = "ei6-iL-drw"; */
+"ei6-iL-drw.text" = "Stedsnavn";
+
+/* (No Commment) */
 "hY6-0v-phf.text" = "Ingen utfordinger";
 
-/* Class = "UILabel"; text = "Summit Name"; ObjectID = "iDh-5N-jVo"; */
+/* (No Commment) */
 "iDh-5N-jVo.text" = "Toppnavn";
 
 /* Class = "UILabel"; text = "Not climbed"; ObjectID = "ja8-RB-6dF"; */
 "ja8-RB-6dF.text" = "Ikke besteget";
 
+/* Class = "UILabel"; text = "Distance"; ObjectID = "nxI-Mn-Mtu"; */
+"nxI-Mn-Mtu.text" = "Avstand";
+
+/* Class = "UILabel"; text = "County, Municipality"; ObjectID = "rWK-ld-6gP"; */
+"rWK-ld-6gP.text" = "Fylke, Kommune";
+
+/* Class = "UILabel"; text = "name"; ObjectID = "tBf-p9-Krp"; */
+"tBf-p9-Krp.text" = "navn";
+
 /* (No Commment) */
 "tEg-Wm-Uvi.title" = " ";
+
+/* Class = "UIButton"; normalTitle = "Read more on our web"; ObjectID = "ted-f3-dIE"; */
+"ted-f3-dIE.normalTitle" = "Les mer på websiden";
 
 /* Class = "UILabel"; text = "climb count"; ObjectID = "uT5-Xn-xFE"; */
 "uT5-Xn-xFE.text" = "toppturer";
@@ -69,7 +135,4 @@
 
 /* Class = "UILabel"; text = "Checkins"; ObjectID = "z17-1s-HLU"; */
 "z17-1s-HLU.text" = "Innsjekkinger";
-
-/* Class = "UILabel"; text = "Project Name"; ObjectID = "zk1-jX-cbe"; */
-"zk1-jX-cbe.text" = "Prosjektnavn";
 
