Show username in ProfileStatsFragment

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -71,6 +71,7 @@
     <string name="action_search">Søk</string>
     <string name="antallbesøk">%d besøk</string>
     <string name="logout">Logg ut</string>
+    <string name="username_unknown">Ukjent</string>
     <plurals name="checkin_daily_count">
         <item quantity="one">Kun en person har sjekket inn her idag.</item>
         <item quantity="other">%d personer har sjekket inn her idag.</item>
