--- a/ios/SjekkUT/nb.lproj/Localizable.strings
+++ b/ios/SjekkUT/nb.lproj/Localizable.strings
@@ -1,8 +1,14 @@
 /* daily checkin description */
 "%@ people have checked in here today." = "%@ personer har sjekket inn her i dag.";
 
+/* time since */
+"(dateRelativeString!) ago" = "(dateRelativeString!) siden";
+
 /* title for location request */
 "Allow using location" = "Tillat å bruke stedstjenester";
+
+/* check in button title */
+"Check in to (firstPlace.name!)" = "Besøk (firstPlace.name!)";
 
 /* Checking in label in summit search */
 "Checking in..." = "Sjekker inn...";
