Start using v2 of Checkin API
- show number of visits in PlaceFragment
- show number of places visited in Project header in PlaceListFragment
- show number of places visited i ProjectListFragment
- added UserCheckins class and getUserCheckins(..) to CheckinApi

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -69,6 +69,7 @@
     <string name="logout">Logg ut</string>
     <string name="username_unknown">Ukjent</string>
     <string name="callback_collecting_place_data">Henter informasjon om stedet</string>
+    <string name="checkin_no_checkins">Vi greide ikke hente innsjekkinger</string>
     <plurals name="checkin_daily_count">
         <item quantity="one">Kun en person har sjekket inn her idag.</item>
         <item quantity="other">%d personer har sjekket inn her idag.</item>
