--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -70,6 +70,7 @@
     <string name="username_unknown">Ukjent</string>
     <string name="callback_collecting_place_data">Henter informasjon om stedet</string>
     <string name="checkin_no_checkins">Vi greide ikke hente innsjekkinger</string>
+    <string name="last_visited">Sist besøkt %s</string>
     <plurals name="checkin_daily_count">
         <item quantity="one">Kun en person har sjekket inn her idag.</item>
         <item quantity="other">%d personer har sjekket inn her idag.</item>
