Rename toolbar titles to more consistent names

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">SjekkUT</string>
+    <string name="app_name">Sjekk UT</string>
+    <string name="screen_profile">Profil</string>
+    <string name="screen_project">Turprosjekt</string>
+    <string name="screen_place">Turpost</string>
     <string name="hello_world">Hello world!</string>
     <string name="county_and_height">%1$s, %2$.0f moh.</string>
     <string name="summits">Besteget %d ganger</string>
