Open link to place homepage (if any)

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -78,6 +78,9 @@
     <string name="last_visited">Sist besøkt %s</string>
     <string name="not_visited">Ikke besøkt</string>
     <string name="your_visits">Dine besøk</string>
+    <string name="homepage_separator">Hjemmeside</string>
+    <string name="no_homepage">Ingen hjemmeside</string>
+    <string name="more_on_homepage"><![CDATA[ Les mer på <a href="%s">hjemmesiden</a> ]]></string>
     <plurals name="checkin_daily_count">
         <item quantity="one">Kun en person har sjekket inn her idag.</item>
         <item quantity="other">%d personer har sjekket inn her idag.</item>
